fix: word wrap issue

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ main {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   font-feature-settings: 'kern';
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .renderer-card .main h1 {
